fixed accordion collapse icon size & position in editor

--- a/src/blocks/accordion/editor.scss
+++ b/src/blocks/accordion/editor.scss
@@ -16,6 +16,7 @@
     }
 
     .ghostkit-accordion-item-heading {
+        position: relative;
         display: block;
         padding: 8px 20px;
         margin-bottom: -1px;
@@ -36,7 +37,8 @@
         top: 0;
         right: 0;
         width: 46px;
-        height: 46px;
+        height: 100%;
+        font-size: .7em;
         cursor: pointer;
         background: none;
         border: none;
